made draggable elements be fixed.  Made the power button smaller.

--- a/assets/css/toolbox.css
+++ b/assets/css/toolbox.css
@@ -4,6 +4,10 @@ default styles
 ----------------------------------------
 */
 
+.ui-draggable {
+    position: fixed !important;
+}
+
 .toolBox {
     text-align: center;
     position: relative;
@@ -161,7 +165,7 @@ default styles
     border-radius: 5px;
     color: rgb(255, 255, 255);
     cursor: pointer;
-    font-size: 15px;
+    font-size: 10px;
     padding: 5px;
     position: fixed;
     z-index: 99999999;
